--- a/herbies.html
+++ b/herbies.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-    <h1>stoopid</h1>   
+    <h1>welcome to herbies!</h1>
     <h4 style="text-align: center">herbies is an EXCLUSIVE space at swarthmore for VEGANS ONLY! MEAT EATERS STAY OUT!!!</h4>
         <div>
             <h2>our events</h2> <!--headings go until h6-->
