--- a/herbies.html
+++ b/herbies.html
@@ -76,41 +76,44 @@
         </div>
 
 
-        <h2>gallery</h2>
-        <div class="container">
-            <div class="gallery-image">
-                <img class="gallery-image-img" src="baked-icecream.png" width="400">
+        <h2 class="subheading">gallery</h2>
+        <div class="gallery-container">
+            <div class="gallery-div">
+                <img class="gallery-image" src="baked-icecream.png">
             </div>
-            <div class="gallery-image">
-                <img class="gallery-image-img" src="earthling-ed.png" width="400">
+            <div class="gallery-div">
+                <img class="gallery-image" src="earthling-ed.png">
             </div>
-            <div class="gallery-image">
-                <img class="gallery-image-img" src="ig-cookie.PNG" width="400">
+            <div class="gallery-div">
+                <img class="gallery-image" src="ig-cookie.PNG">
             </div>
-            <div class="gallery-image">
-                <img class="gallery-image-img" src="nathan-dog.HEIC" width="400">
+            <div class="gallery-div">
+                <img class="gallery-image" src="nathan-dog.HEIC">
             </div>
-            <div class="gallery-image">
-                <img class="gallery-image-img" src="intro-picnic.png" width="400">
+            <div class="gallery-div">
+                <img class="gallery-image" src="intro-picnic.png">
             </div>
-            <div class="gallery-image">
-                <img class="gallery-image-img" src="maddie-cookie.png" width="400">
+            <div class="gallery-div">
+                <img class="gallery-image" src="maddie-cookie.png">
             </div>
-            <div class="gallery-image">
-                <img class="gallery-image-img" src="vegandale-group.png" width="400">
+            <div class="gallery-div">
+                <img class="gallery-image" src="vegandale-group.png">
             </div>
-            <div class="gallery-image">
-                <img class="gallery-image-img" src="taco-night.png" width="400">
+            <div class="gallery-div">
+                <img class="gallery-image" src="taco-night.png">
+            </div>
+            <div class="gallery-div">
+                <img class="gallery-image" src="vegandale-nappers.png">
             </div>
         </div>
 
-        <h2>past events</h2>
-        <div class="container">
-            <div>
-                <img src="baking-poster.JPEG" width="400">
+        <h2 class="subheading">past events</h2>
+        <div class="poster-container">
+            <div class="poster-div">
+                <img class="poster-image" src="baking-poster.JPEG" width="400">
             </div>
-            <div>
-                <img src="earthling-poster.jpg" width="400">
+            <div class="poster-div">
+                <img class="poster-image" src="earthling-poster.jpg" width="400">
             </div>
         </div>
         
