need to fix gallery grid/flexbox

--- a/herbies.html
+++ b/herbies.html
@@ -71,49 +71,49 @@
                 </form>
             </div>
             <!--insert image: source file, alternative text, width (in pixels)-->
-            <img class="big-cookie" src="big-cookie.png" alt="ameels showing off big cookie">
+            <img class="big-cookie" src="images/big-cookie.png" alt="ameels showing off big cookie">
             <!--link to another webpage-->
         </div>
 
 
         <h2 class="subheading">gallery</h2>
-        <div class="gallery-container">
+        <div class="gallery-grid">
             <div class="gallery-div">
-                <img class="gallery-image" src="baked-icecream.png">
+                <img class="gallery-image" src="images/baked-icecream.png">
             </div>
             <div class="gallery-div">
-                <img class="gallery-image" src="earthling-ed.png">
+                <img class="gallery-image" src="images/earthling-ed.png">
             </div>
             <div class="gallery-div">
-                <img class="gallery-image" src="ig-cookie.PNG">
+                <img class="gallery-image" src="images/ig-cookie.PNG">
             </div>
             <div class="gallery-div">
-                <img class="gallery-image" src="nathan-dog.HEIC">
+                <img class="gallery-image" src="images/nathan-dog.HEIC">
             </div>
             <div class="gallery-div">
-                <img class="gallery-image" src="intro-picnic.png">
+                <img class="gallery-image" src="images/intro-picnic.png">
             </div>
             <div class="gallery-div">
-                <img class="gallery-image" src="maddie-cookie.png">
+                <img class="gallery-image" src="images/maddie-cookie.png">
             </div>
             <div class="gallery-div">
-                <img class="gallery-image" src="vegandale-group.png">
+                <img class="gallery-image" src="images/vegandale-group.png">
             </div>
             <div class="gallery-div">
-                <img class="gallery-image" src="taco-night.png">
+                <img class="gallery-image" src="images/taco-night.png">
             </div>
             <div class="gallery-div">
-                <img class="gallery-image" src="vegandale-nappers.png">
+                <img class="gallery-image" src="images/vegandale-nappers.png">
             </div>
         </div>
 
         <h2 class="subheading">past events</h2>
         <div class="poster-container">
             <div class="poster-div">
-                <img class="poster-image" src="baking-poster.JPEG" width="400">
+                <img class="poster-image" src="images/baking-poster.JPEG" width="400">
             </div>
             <div class="poster-div">
-                <img class="poster-image" src="earthling-poster.jpg" width="400">
+                <img class="poster-image" src="images/earthling-poster.jpg" width="400">
             </div>
         </div>
         
